--- a/src/page/Login.css
+++ b/src/page/Login.css
@@ -4,14 +4,21 @@
   align-items: center;
   height: calc(100vh - 84.5px);
   flex-direction: column;
+  width: 350px;
+  margin: 0 auto;
+}
+
+.input-wrap h1 {
+  margin-bottom: 2rem;
+  font-size: 3rem;
 }
 
 .input-wrap input {
-  width: 350px;
+  width: 100%;
   height: 50px;
   line-height: 50px;
-  border-radius: 5px;
-  border: 1px solid #000;
+  border: none;
+  border-bottom: 1px solid #888;
   font-size: 1rem;
   padding: 0 10px;
   box-sizing: border-box;
@@ -20,4 +27,30 @@
 
 .input-wrap input + input {
   margin-top: 20px;
+}
+
+.input-wrap .btn-wrap {
+  width: 100%;
+  display: flex;
+  gap: 10px;
+  margin-top: 20px;
+}
+
+.input-wrap .btn-wrap button {
+  height: 50px;
+  color: #fff;
+  background: #333;
+  font-size: 1rem;
+  text-align: center;
+  border: none;
+  flex: 1;
+  cursor: pointer;
+  vertical-align: middle;
+  transition: all 0.2s;
+}
+
+.input-wrap .btn-wrap button:hover {
+  background: #fff;
+  color: #333;
+  border: 1px solid #333;
 }
