상세페이지 기능 추가

--- a/src/App.css
+++ b/src/App.css
@@ -105,6 +105,7 @@ li {
   align-items: flex-start;
   margin: 50px;
   justify-content: flex-start;
+  color: #fff;
 }
 
 @media screen and (max-width: 768px) {
