--- a/src/components/MovieDetail.css
+++ b/src/components/MovieDetail.css
@@ -26,14 +26,14 @@
   background: linear-gradient(
     90deg,
     rgba(0, 0, 0, 1) 0%,
-    rgba(0, 212, 255, 0) 100%
+    rgba(0, 212, 255, 0) 70%
   );
 }
 .detail-box .detail-img:before {
   content: "";
   display: inline-block;
   position: absolute;
-  height: 140px;
+  height: 100%;
   width: 100%;
   bottom: 0px;
   right: 0;
@@ -41,7 +41,7 @@
   background: linear-gradient(
     2deg,
     rgba(0, 0, 0, 9) 0%,
-    rgba(0, 212, 255, 0) 100%
+    rgba(0, 212, 255, 0) 70%
   );
 }
 
@@ -216,6 +216,7 @@
 .review .box .info-box {
   flex-grow: 1;
   padding-left: 20px;
+  text-align: left;
 }
 .review .box .img {
   width: 32px;
@@ -241,22 +242,29 @@
 }
 .review-btns {
   position: absolute;
-  right: 30px;
+  right: 10px;
   top: 50%;
   transform: translateY(-50%);
 }
 
 .review-btns button {
-  background: #fff;
-  color: #333;
-  border: 1px solid #fff;
   padding: 5px;
   cursor: pointer;
+  font-size: 0;
+  width: 24px;
+  height: 24px;
+  border: none;
 }
 .review-btns button + button {
   margin-left: 10px;
 }
-.review .box .info {
+.review-btns .edit {
+  background: url("/public/images/icon-edit.png") no-repeat 50%;
+  background-size: cover;
+}
+.review-btns .delete {
+  background: url("/public/images/icon-delete.png") no-repeat 50%;
+  background-size: cover;
 }
 
 .detail-info-wrap {
