--- a/src/page/Mypage/style.css
+++ b/src/page/Mypage/style.css
@@ -3,10 +3,14 @@
 }
 
 .myinfo-wrap {
-  width: 200px;
+  width: 300px;
   padding: 0 30px;
   box-sizing: border-box;
   color: #fff;
+}
+.myinfo-wrap .img {
+  max-width: 50%;
+  margin: 0 auto;
 }
 .myinfo-wrap .name {
   text-align: center;
@@ -31,12 +35,12 @@
   color: #fff;
   position: relative;
   text-align: left;
-  font-size: 1rem;
+  font-size: 1.1rem;
   padding: 5px 0;
   cursor: pointer;
 }
 .mypage-menu-wrap ul li button:after {
-  content: ">";
+  content: "";
   display: inline-block;
   position: absolute;
   right: 0;
@@ -45,6 +49,11 @@
   color: #fff;
   font-size: 1rem;
   transition: all 0.2s;
+  width: 20px;
+  height: 20px;
+  background: url("/public/images/icon-faq.png") no-repeat 50%;
+  background-size: cover;
+  transform: rotate(-95deg);
 }
 .mypage-menu-wrap ul li button:hover:after {
   right: 10px;
